fix layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,10 +1,11 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
-  border-radius: .25rem;
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
+  border-radius: 0.25rem;
 
   display: grid;
   justify-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   text-align: center;
   padding: 1.75rem 1rem;
 
@@ -19,19 +20,20 @@
   }
 
   & p {
-    color: #A8A29E;
+    color: #a8a29e;
   }
 
-  &:hover, &:has(input:focus) {
-    border-width: 2px;
+  &:hover,
+  &:has(input:focus) {
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
     & p {
       color: var(--text-tertiary);
-  }
+    }
 
-  & svg path {
-    stroke: #F67841;
+    & svg path {
+      stroke: #f67841;
+    }
   }
-}
 }
